# usdBVHAnim

./: .clang-format  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  valgrind.supp
.github/workflows/: cmake-multi-platform.yml  publish-docs.yml
data/: test_bvh.blend  test_bvh.bvh  test_bvh_scale_arg.usda  test_bvh_without_scale_arg.usda
docs/: Doxyfile.in
docs/sphinx/source/: building_and_installing.rst  guide.rst  index.rst  intro.rst  license.rst  scaling_animation_data.rst  usd_structure.rst
src/usdBVHAnimPlugin/: CMakeLists.txt
src/usdBVHAnimPlugin/Docs/: index.rst
src/usdBVHAnimPlugin/Private/: Parse.h  ParseBVH.cpp  ParseBVH.h  Version.h
src/usdBVHAnimPlugin/Public/: BvhFileFormat.cpp  plugInfo.json  plugInfo.json.in
src/usdBVHAnimPlugin/Tests/: ParseBVHTests.cpp  ParseTests.cpp  Tests.cpp  Tests.h  USDTests.cpp
src/usdBVHPlugin/: CMakeLists.txt
src/usdBVHPlugin/Docs/: index.rst
src/usdBVHPlugin/Private/: ParseBVH.cpp  ParseBVH.h  Private.cpp  Private.h
src/usdBVHPlugin/Public/: BvhFileFormat.cpp  ExampleRuntimeLibrary.cpp  ExampleRuntimeLibrary.h  plugInfo.json
src/usdBVHPlugin/Tests/: Tests.cpp  Tests.h
